<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sequence Log Service</string>

    <string name="service_settings">Sequence Log Service 設定</string>
    <string name="shared_memory_path">Shared memory path</string>
    <string name="log_output_dir">log output dir</string>
    <string name="max_file_size">max file size</string>
    <string name="max_file_size_unit">file size unit</string>
    <string name="max_file_count">max file count</string>
    <string name="change_super_user">change super user</string>

    <string name="web_server_settings">Sequence Log Service Web Server Settings</string>
    <string name="web_server_port">Sequence Log Service Web Server port</string>

    <string name="sequence_log_server_settings">Sequence Log Server Settings</string>
    <string name="sequence_log_server_ip">Sequence Log Server IP</string>
    <string name="sequence_log_server_port">Sequence Log Server port</string>

    <string name="official_home_page">http://www.printf.jp/SequenceLog/</string>
    <string name="gitHub">https://github.com/nandai/slog/</string>

    <string name="start_service">Start Sequence Log Service</string>
    <string name="running">Running</string>
    <string name="stopping">Stopping</string>

    <string name="general_user">General user</string>
    <string name="super_user">Super user</string>

    <string name="permission_denied">directory permission denied.</string>
</resources>
