<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/service_settings">
        <SwitchPreference
            android:key="startStop"
            android:defaultValue="false"
            android:switchTextOn="ON"
            android:switchTextOff="OFF"
            android:title="@string/app_name"
            android:summary=" " />

        <EditTextPreference
            android:key="sharedMemoryPathName"
            android:defaultValue="/sdcard/slog/shm"
            android:title="@string/shared_memory_path"
            android:dialogTitle="@string/shared_memory_path" />

        <EditTextPreference
            android:key="logOutputDir"
            android:defaultValue="/sdcard/slog"
            android:title="@string/log_output_dir"
            android:dialogTitle="@string/log_output_dir" />

        <EditTextPreference
            android:key="maxFileSize"
            android:defaultValue="0"
            android:title="@string/max_file_size"
            android:dialogTitle="@string/max_file_size"
            android:inputType="number" />

        <ListPreference
            android:key="maxFileSizeUnit"
            android:defaultValue="MB"
            android:title="@string/max_file_size_unit"
            android:dialogTitle="Unit"
            android:entries="@array/max_file_size_unit"
            android:entryValues="@array/max_file_size_unit" />

        <EditTextPreference
            android:key="maxFileCount"
            android:defaultValue="0"
            android:title="@string/max_file_count"
            android:dialogTitle="@string/max_file_count"
            android:inputType="number" />
    </PreferenceCategory>
        
    <PreferenceCategory android:title="@string/web_server_settings">
        <EditTextPreference
            android:key="webServerPort"
            android:defaultValue="8080"
            android:title="@string/web_server_port"
            android:dialogTitle="@string/web_server_port"
            android:inputType="number" />
    </PreferenceCategory>
        
    <PreferenceCategory android:title="@string/sequence_log_server_settings">
        <EditTextPreference
            android:key="sequenceLogServerIp"
            android:defaultValue="192.168.0.2"
            android:title="@string/sequence_log_server_ip"
            android:dialogTitle="@string/sequence_log_server_ip" />

        <EditTextPreference
            android:key="sequenceLogServerPort"
            android:defaultValue="8081"
            android:title="@string/sequence_log_server_port"
            android:dialogTitle="@string/sequence_log_server_port"
            android:inputType="number" />

    </PreferenceCategory>
</PreferenceScreen>
